Stopped using godep, Also deploy .js.map

--- a/cmd/mandelbrot-gui/Makefile
+++ b/cmd/mandelbrot-gui/Makefile
@@ -1,5 +1,5 @@
 run:
-	godep go run main.go
+	go run main.go
 
 js:
 	gopherjs build -m -o main.js main.go
@@ -8,4 +8,4 @@ html:
 	echo '<!DOCTYPE html>\n<script src="main.js"></script>' > index.html
 
 deploy: js
-	scp main.js data.gopher.se:/var/www/data.gopher.se/js/mandelbrot/
+	scp main.js* data.gopher.se:/var/www/data.gopher.se/js/mandelbrot/
