--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: go
 
+sudo: false
+
 go: 1.4.2
 
 install:
-  - sudo apt-get install libopenal1 libopenal-dev libglfw3 libglfw3-dev
-  - go get github.com/hajimehoshi/ebiten
+  - true
+
+script:
+  - go test
